# object_manager

./: CMakeLists.txt  README.md  package.xml
config/: objects.yaml
launch/: object_manager.launch.py
object_manager/include/object_manager/: object_manager.hpp
object_manager/src/: object_manager_node.cpp
object_manager/srv/: AddCollisionObject.srv
src/: collision_spawner.cpp
srv/: RemoveCollisionObject.srv
